Project6_Kong/yaml/apply_key_ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    konghq.com/plugins: key-auth-plugin
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: hello-service
            port:
              number: 80
